--- a/main/res/values/styles.xml
+++ b/main/res/values/styles.xml
@@ -1,20 +1,11 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.MyApp" parent="Theme.MaterialComponents.DayNight">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="Title">
-        <item name="android:textColor">#FF5733</item>
-        <item name="android:textSize">30dp</item>
-    </style>
-    <style name="subTitle">
-        <item name="android:textColor">#673AB7</item>
-        <item name="android:textSize">20dp</item>
-    </style>
-
 
 </resources>
